== Upgrade Notice ==
* Attachments are now processed in the order they were attached.
* XSS detection only issues a warning now

== CHANGELOG ==
= 1.4.10 (future) =
* placeholder

= 1.4.9 (2012.12.10) =
* Fixed bug where date, author, etc didn't get set.
* Fixed bug where Postie was treating attached images as strings
* Fixed bug where inline images were not being attached correctly
* Fixed bug where the subject was not being decoded correctly if the charset was different from the system charset
* Fixed bug where base64 strings were being double decoded.

= 1.4.8 (2012.12.09) =
* fix collisions with simple_html_dom
* fix bug when trying to get file name from MIME part
* fix bug causing Cannot modify header information warning 

= 1.4.7 (2012.12.07) =
* Fixed bug in cron setup that was preventing Weekly, twice an hour and every ten minute schedules from running.

= 1.4.6 (2012.12.06) =
* Changed XSS check to only emit warning until a better solution can be developed
* Fixed bug where authorized addresses were being checked with case sensitive rather than insensitive.
* Started using PHP Simple HTML DOM Parser http://simplehtmldom.sourceforge.net/
* Started process of logging all error messages to the log as well as the page (where appropriate)
* Fixed bug where "Preferred Text Type" was not displaying the saved value in settings page.
* Fixed bug where Postie was wiping out all other cron schedules.
* Fixed a number of missing internationalization strings (no translations added however)
* Added documentation for the comments: command
* Added feature to specify a custom post type in the subject line. Thanks to Raam Dev http://raamdev.com for his code.
* Removed a number of deprecated WordPress functions.
* Fixed numerous warning messages
* Added phpUnit tests
* Allow wp-config.php to be in alternate location as described here: http://codex.wordpress.org/Hardening_WordPress#Securing_wp-config.php
* Fix a bug that didn't replace the #img# tags correctly.
