@@ -2,6 +2,7 @@ see: http://codex.wordpress.org/Writing_a_Plugin#Updating_your_Plugin
 update docs\Changes.txt
 update version number in postie.php
 update version number in docs\postie.txt
+update date in docs\Changes.txt
 run deploy.cmd
 commit
 branch trunk to new version
