@@ -1,10 +1,13 @@
 == Upgrade Notice ==
 * Attachments are now processed in the order they were attached.
-* XSS detection only issues a warning now
+* All script, style and body tags are stripped from html emails.
 
 == CHANGELOG ==
 = 1.4.10 (future) =
-* placeholder
+* Fix warning when there is no subject
+* Strip all body, script and style tags from HTML content
+* Remove XSS warning
+* Fix bug where post type was not being detected if only case is different
 
 = 1.4.9 (2012.12.10) =
 * Fixed bug where date, author, etc didn't get set.
